--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -37,6 +37,8 @@ html {
 .TextView {border-left: 4px solid #0FF;}
 .Button {border-left: 4px solid #FF0;}
 
+/* Layout */
+
 .layout_width-match_parent {
 	width: 100%;
 }
@@ -45,11 +47,22 @@ html {
 	height: 100%;
 }
 
+
 .LinearLayout {
 	display: flex;
     flex-direction: column;
 }
 
+.FrameLayout {
+	position: relative;
+}
+
+.FrameLayout > * {
+	position: absolute;
+}
+
+
+/* may be wrong... */
 .RelativeLayout {
 	position: relative;
 }
@@ -57,6 +70,7 @@ html {
 .RelativeLayout > * {
 	position: absolute;
 }
+
 
 :not(.layout_height-wrap_content) {
 	flex-grow: 1;
