--- a/css/editor.css
+++ b/css/editor.css
@@ -22,6 +22,7 @@ html {
 	height:100%;
 	padding: 20px;
 	float: left;
+	position: relative;
 }
 
 .CodeMirror-scroll {
@@ -38,8 +39,22 @@ html {
 }
 
 .output-area.disabled {
-	opacity: 0.4;
+	opacity: 0.6;
 	outline: 8px solid #F99;
+}
+
+
+.error-msg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	padding: 5px;
+	color: #a33;
+	background: rgba(255,255,255,0.8);
+	z-index:100;
+	font-size:13px;
+	line-height: 1.4;
 }
 
 
