--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -1,3 +1,11 @@
+html, body {
+	min-height: 100%;
+}
+
+body {
+	height: 100%;
+}
+
 .output-area {
 	box-sizing: border-box;
 	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
@@ -14,17 +22,24 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	margin: -20px;
 	/*background-image: url(../images/generic-android-phone-png.png);*/
 	background-repeat: no-repeat;
 	/*background-size: 50%;*/
-	width: 1080px;
-	height: 1920px;
+	width: 100%;
+	height: 100%;
 	/*padding-bottom: 206%; /* preserves the aspect ratio */
+}
+
+.phone canvas {
+	max-width:100%;
+	max-height:100%;
+	margin:0 auto;
+	display: block;
 }
 
 .screen {
 	position: absolute;
+	left:100%;
 	width: 1080px;
 	height: 1920px;
 	
