--- a/css/editor.css
+++ b/css/editor.css
@@ -18,11 +18,11 @@ html {
 	float: left;
 }
 .output-area {
-	width:30%;
-	height:100%;
-	padding: 20px;
-	float: left;
-	position: relative;
+	width:29%;
+	position: absolute;
+	top: 20px;
+	bottom: 20px;
+	right: 20px;
 }
 
 .CodeMirror-scroll {
