add orientation:horizontal/vertical, change default orientation to horizontal

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -92,7 +92,11 @@ body {
 
 
 .LinearLayout {
-	display: flex;
+	display: flex!important;
+    flex-direction: row;
+}
+
+.LinearLayout.orientation-vertical {
     flex-direction: column;
 }
 
