--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -24,8 +24,8 @@ body {
 	/*background-image: url(../images/generic-android-phone-png.png);*/
 	background-repeat: no-repeat;
 	/*background-size: 50%;*/
-	width: 100%;
-	height: 100%;
+	width: 360px;
+	height: 640px;
 	/*padding-bottom: 206%; /* preserves the aspect ratio */
 }
 
