LinearLayout should cut off children on overflow

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -94,6 +94,7 @@ body {
 .LinearLayout {
 	display: flex!important;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .LinearLayout.orientation-vertical {
