Fix ImageView dimensions (tests 70-120)

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -133,15 +133,16 @@ body {
 */
 
 /* ImageView Attributes */
-.scaleType-centerCrop {
-	background-size: cover;
-	background-position: center;
-}
-
+.ImageView,
 .scaleType-centerInside {
 	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
+}
+
+.scaleType-centerCrop {
+	background-size: cover;
+	background-position: center;
 }
 
 .gravity-center,
