android:layout_weight

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -66,6 +66,10 @@ body {
 	position: absolute;
 }
 
+.hidden-pending-setTimeout {
+	visibility: hidden;
+}
+
 /* ===== Styling for Android Layout XML ===== */
 
 .element-outlines-enabled .screen * {
