--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -27,22 +27,14 @@ body {
 	width: 563px;
 	height: 952px;
 	
-	margin-top: -83px;
-	margin-right: -83px;
 	
 	transform-origin: 100% 0;
-}
-
-.input-area {
-	margin-right: 420px;
 }
 
 
 .test-reference-image {
 	display: none;
 	position: absolute;
-	right:420px;
-	top: 0;
 }
 
 .testing-mode .test-reference-image {
@@ -50,7 +42,26 @@ body {
 }
 
 
-@media (min-width: 851px) and (max-width: 1000px) {
+
+@media (min-width: 700px) {
+	.phone {
+		transform: scale(0.66);
+		margin-top: -60px;
+		margin-right: -60px;
+	}
+	
+	.input-area {
+		margin-right: 278px;
+	}
+
+	.test-reference-image {
+		right:270px;
+		top: 0;
+	}
+
+}
+/*(min-height: 800px) and */
+@media (min-width: 851px) {
 	.phone {
 		transform: scale(0.75);
 		margin-top: -62px;
@@ -68,22 +79,22 @@ body {
 
 }
 
-@media (min-width: 700px) and (max-width: 850px) {
+/*(min-height: 800px) and */
+@media (min-width: 1001px) {
 	.phone {
-		transform: scale(0.66);
-		margin-top: -60px;
-		margin-right: -60px;
+		transform: scale(1);
+		margin-top: -83px;
+		margin-right: -83px;
 	}
-	
+
 	.input-area {
-		margin-right: 278px;
+		margin-right: 420px;
 	}
 
 	.test-reference-image {
-		right:270px;
+		right:420px;
 		top: 0;
 	}
-
 }
 
 /*@media (max-width: 700px) {
