--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -212,6 +212,11 @@ body {
 */
 
 /* ImageView Attributes */
+.ImageView {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 .ImageView,
 .scaleType-centerInside {
 	background-size: contain;
