--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -141,6 +141,32 @@ body {
 }
 
 
+.image-asset-list {
+	padding: 0;
+}
+
+.image-asset {
+	position: relative;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	list-style: none;
+	margin: 0 0 15px;
+	padding: 0 0 50%;
+	box-shadow: 0px 2px 4px 0.5px rgba(0,0,0,0.4);
+}
+
+.image-asset-name {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 2px 2px 1px;
+	text-align: center;
+	font-size:16px;
+	background-color: rgba(255,255,255,0.7);
+}
+
 
 /* Utilities */
 .absolute {
