--- a/css/editor.css
+++ b/css/editor.css
@@ -3,10 +3,9 @@ html {
 	box-sizing: border-box;
 }
 
-body {
+.wrapper {
 	position: relative;
 	min-height: 100%;
-	min-width: 800px;
 	max-width: 1050px;
 	margin: 0 auto;
 	padding:10px 20px;
@@ -15,6 +14,27 @@ body {
 *, *:before, *:after {
 	box-sizing: inherit;
 }
+
+
+
+.unsupported-browser {
+	margin-top: 30px;
+}
+
+.unsupported-browser .panel-body {
+	padding-top: 50px;
+	padding-bottom: 60px;
+}
+
+.unsupported-browser .browser-link img {
+	margin-right: 5px;
+}
+
+.unsupported-browser .frown-cloud {
+	margin-top: 20px;
+}
+
+
 
 .input-area-wrapper .panel-body {
 	padding-top: 0;
